<resources>
    <string name="app_name">Occupines</string>
    <string name="splash_screen">Splash screen</string>
    <string name="icon">Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="likes">Likes</string>
    <string name="calendar">Calendar</string>
    <string name="_2nd_fragment">2nd fragment</string>
    <string name="full_name">Full Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="user">User</string>
    <string name="menu">Menu</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="messages">Messages</string>
    <string name="list_property">List Property</string>
    <string name="submit">Submit</string>
    <string name="type">Type</string>
    <string name="price">Price (₱)</string>
    <string name="location">Location</string>
    <string name="info">Info</string>
    <string name="add_photo">Add photo</string>
    <string name="property_image">Property image</string>
    <string name="owner">Owner</string>
    <string name="price_result">Price result</string>
    <string name="type_result">Type result</string>
    <string name="location_result">Location result</string>
    <string name="owner_result">Owner result</string>
    <string name="info_result">Info result</string>
    <string name="message_owner">Message Owner</string>
    <string name="loading">Loading…</string>
    <string name="like">Like</string>

    <string-array name="types">
        <item name="house">House</item>
        <item name="apartment">Apartment</item>
        <item name="boarding">Boarding</item>
    </string-array>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view_property">View Property</string>
    <string name="logo">Logo</string>
    <string name="about_us"><b>About Us</b>\n
        \n
        Occupines is a residential property rental finder application specifically targeted at tenants
        who are in a look for rental homes in the different parts of Baguio City. Started as a project
        by University students, Occupines envisions to help with the ease of search for rental homes,
        provide utility on the go and help in the advertisement of rental spaces here in Baguio City
        with just a simple tap or press of a button on your mobile phone. At Occupines, we believe by
        creating our application we provide a quality and customer friendly tool for various Tenants
                to use here in the City of Pines.\n
        \n
        <b>F.A.Q. (Frequently Asked Questions)</b>\n
        \n
        Q: What does the application do?\n
        A:  Occupines list rental spaces for tenants to look for, provides utility, and make it easier
        to find a rental home.\n
        \n
        Q: Which rental homes does the application list?\n
        A: Occupines list houses, apartments, and boarding houses.\n
        \n
        Q: Are payment transactions done within the Occupines application?\n
        A: No, payment transactions are done between the Landlord and the Tenant.\n
        \n
        Q: Is Occupines available for IoS?\n
        A: No, Occupines is exclusive only on Android.\n
        \n
        Q: Can I use Occupines outside of Baguio?\n
        A: No, Occupines is restricted to rental spaces here in Baguio City.\n
        \n
        Q: How do I list my property?\n
        A: By registering an account on the application and selecting the list property option.\n
        \n
        Q: Is the application free to use?\n
        A: Yes, the application is free to use for Tenants and Landlords in Baguio City.</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="change_name">Change name</string>
    <string name="username">username</string>
    <string name="send">Send</string>
    <string name="type_your_message">Type your message…</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="you_have_no_messages">You have no messages</string>
    <string name="liked">Liked</string>
    <string name="you_have_no_likes">You have no likes</string>
    <string name="add_event_button">Add event button</string>
    <string name="show_rentals">Show Rentals</string>
</resources>