<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/likes"
        android:enabled="true"
        android:icon="@drawable/ic_likes"
        android:title="@string/likes" />
    <item
        android:id="@+id/messages"
        android:enabled="true"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages" />
    <item
        android:id="@+id/calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/location"
        android:enabled="true"
        android:icon="@drawable/ic_location"
        android:title="@string/location" />
</menu>